; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/extr_rndis_wlan.c_get_bcm4320_power_dbm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/extr_rndis_wlan.c_get_bcm4320_power_dbm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rndis_wlan_private = type { i32 }

@BCM4320_DEFAULT_TXPOWER_DBM_100 = common dso_local global i32 0, align 4
@BCM4320_DEFAULT_TXPOWER_DBM_75 = common dso_local global i32 0, align 4
@BCM4320_DEFAULT_TXPOWER_DBM_50 = common dso_local global i32 0, align 4
@BCM4320_DEFAULT_TXPOWER_DBM_25 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rndis_wlan_private*)* @get_bcm4320_power_dbm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_bcm4320_power_dbm(%struct.rndis_wlan_private* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rndis_wlan_private*, align 8
  store %struct.rndis_wlan_private* %0, %struct.rndis_wlan_private** %3, align 8
  %4 = load %struct.rndis_wlan_private*, %struct.rndis_wlan_private** %3, align 8
  %5 = getelementptr inbounds %struct.rndis_wlan_private, %struct.rndis_wlan_private* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %7 [
    i32 3, label %8
    i32 2, label %10
    i32 1, label %12
    i32 0, label %14
  ]

7:                                                ; preds = %1
  br label %8

8:                                                ; preds = %1, %7
  %9 = load i32, i32* @BCM4320_DEFAULT_TXPOWER_DBM_100, align 4
  store i32 %9, i32* %2, align 4
  br label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @BCM4320_DEFAULT_TXPOWER_DBM_75, align 4
  store i32 %11, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load i32, i32* @BCM4320_DEFAULT_TXPOWER_DBM_50, align 4
  store i32 %13, i32* %2, align 4
  br label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @BCM4320_DEFAULT_TXPOWER_DBM_25, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %12, %10, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
